# NvimCMakePluginTest

./: .gitignore  CMakeLists.txt  neovim.json  test.cpp
